attached_assets/Pasted-Starting-Container-app-server-index-production-ts-10-import-accountingRoutes-from-routes-account-1759086283235_1759086283235.txt
Starting Container
/app/server/index.production.ts:10
import accountingRoutes from './routes-accounting.js';
       ^
SyntaxError: The requested module './routes-accounting.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.8
/app/server/index.production.ts:10
import accountingRoutes from './routes-accounting.js';
       ^
SyntaxError: The requested module './routes-accounting.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.8
/app/server/index.production.ts:10
import accountingRoutes from './routes-accounting.js';
       ^
SyntaxError: The requested module './routes-accounting.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.8
/app/server/index.production.ts:10
import accountingRoutes from './routes-accounting.js';
       ^
SyntaxError: The requested module './routes-accounting.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.8
/app/server/index.production.ts:10
import accountingRoutes from './routes-accounting.js';
       ^
SyntaxError: The requested module './routes-accounting.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.8
/app/server/index.production.ts:10
import accountingRoutes from './routes-accounting.js';
       ^
SyntaxError: The requested module './routes-accounting.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.8
/app/server/index.production.ts:10
import accountingRoutes from './routes-accounting.js';
       ^
SyntaxError: The requested module './routes-accounting.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.8
/app/server/index.production.ts:10
import accountingRoutes from './routes-accounting.js';
       ^
SyntaxError: The requested module './routes-accounting.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.8
/app/server/index.production.ts:10
import accountingRoutes from './routes-accounting.js';
       ^
SyntaxError: The requested module './routes-accounting.js' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)
Node.js v18.20.8
Node.js v18.20.8
import accountingRoutes from './routes-accounting.js';
/app/server/index.production.ts:10
       ^
SyntaxError: The requested module './routes-accounting.js' does not provide an export named 'default'